Added new Request Status

--- a/frontend/frontend/src/app/components/add-book/add-book.component.html
+++ b/frontend/frontend/src/app/components/add-book/add-book.component.html
@@ -24,10 +24,10 @@
                 <input type="text" name="img" id="img" placeholder="Image url" ngModel>
               </div>
             </div>
-            <div class="col-md-6 graphicdesign illustrator photography">
-              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="col-md-4 col-form-label text-right">
-                  <button type="submit" value="submit" class="btn btn-primary" style="float: right;">Submit</button>
+            <div class="col-md-6 graphicdesign illustrator photography ml-1 mr-5">
+              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ml-5 mr-5">
+                <div class="col-md-4 col-form-label ml-5 mr-5">
+                  <button type="submit" value="submit" class="btn btn-primary">Submit</button>
                 </div>
               </div>
             </div>
@@ -37,4 +37,3 @@
     </div>
   </div>
 </div>
-
