--- a/frontend/frontend/src/app/components/book/book.component.html
+++ b/frontend/frontend/src/app/components/book/book.component.html
@@ -1,15 +1,15 @@
 <app-header></app-header>
-
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container my-4">
   <div class="row">
     <div class="col-md-3" *ngFor="let book of books">
       <div class="ibox">
         <div class="ibox-content product-box">
-          <div class="product-imitation" style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%; background-repeat: no-repeat; margin-left: 80px; margin-right: 80px;">
+          <div class="product-imitation"
+            style="background-image:url('{{book.imgUrl}}'); background-size: auto 100%; background-repeat: no-repeat; margin-left: 80px; margin-right: 80px;">
           </div>
           <div class="product-desc">
-            <span class="product-price">
+            <span class="product-price mr-4">
               {{book.status}}
             </span>
             <h5 class="product-name"> {{book.name}}</h5>
@@ -26,10 +26,10 @@
                 <div class="col"><a href="https://www.google.com/search?q={{book.name}}"
                     class="btn btn-xs btn-outline btn-primary">More Info <i class="fa fa-long-arrow-right"></i> </a>
                 </div>
-               <!-- <div class="col"><a class="btn btn-xs btn-outline btn-primary" href="/createRequest">Request</a> </div> -->
-               <div class="col" *ngIf="user && book.owner.username != user">
-                <button class="btn btn-xs btn-outline btn-primary" (click)="navigateToRequest(book.id)">Request</button>
-              </div>
+                <div class="col" *ngIf="user && book.owner.username != user">
+                  <button class="btn btn-xs btn-outline btn-primary"
+                    (click)="navigateToRequest(book.id)">Request</button>
+                </div>
               </div>
             </div>
           </div>
