--- a/frontend/frontend/src/app/components/create-request/create-request.component.html
+++ b/frontend/frontend/src/app/components/create-request/create-request.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
-
-<div class="container">
+<div class="container my-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card">
@@ -8,54 +7,55 @@
         <div class="card-body">
           <form class="text-center border border-light p-5" #createRequest="ngForm"
             (ngSubmit)="onSubmit(createRequest.value)">
-            <!--My Books-->
             <div class="form-group row">
-
-              <div class="col-md-6 graphicdesign illustrator photography">
-                <h5> <label for="bookToGive" class="col-md-4 col-form-label block text-center">My Books</label></h5>
-                <div *ngFor="let book of myBooks">
-                  <div *ngIf="book.status == 'AVAILABLE'">
-                    <div class="gal-detail thumb">
-                      <a href="#" class="image-popup">
-                        <img src={{book.imgUrl}} class="thumb-img" alt="work-thumbnail">
-                      </a>
-                      <input type="radio" class="option-input radio" value="{{book.id}}" name="bookToGive" ngModel>
-                      <div class="ga-border"></div>
-                      <div>{{book.id}}</div>
-                      <div>Book: {{book.name}}</div>
-                      <p class="text-muted text-center"><small>{{book.description}}</small></p>
+              <div class="col-md-6 graphicdesign illustrator photography text-center">
+                <div class="w-50">
+                  <h5 class="text-right">My Books</h5>
+                </div>
+                <div *ngIf="myBooks && myBooks.length > 0">
+                  <div *ngFor="let book of myBooks">
+                    <div *ngIf="book.status == 'AVAILABLE'">
+                      <div class="gal-detail thumb">
+                        <a href="#" class="image-popup">
+                          <img src={{book.imgUrl}} class="thumb-img" alt="work-thumbnail">
+                        </a>
+                        <input type="radio" class="option-input radio" value="{{book.id}}" name="bookToGive" ngModel>
+                        <div class="ga-border"></div>
+                        <div>Book: {{book.name}}</div>
+                        <p class="text-muted text-center"><small>{{book.description}}</small></p>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-
-              <!--Wanted-->
-
+              <div *ngIf="myBooks && myBooks.length &lt; 1">
+                <span class="text-danger">You don't have any books. To add a book click <a
+                    routerLink="/addBook">here.</a></span>
+              </div>
               <div class="col-md-6 graphicdesign illustrator photography">
-                <h5> <label for="bookToGive" class="col-md-4 col-form-label block text-center">Requested</label></h5>
+                <div class="w-75 text-center">
+                  <h5>Requested book</h5>
+                </div>
                 <div class="gal-detail thumb">
                   <a href="#" class="image-popup">
                     <img src={{wantedBook.imgUrl}} class="thumb-img" alt="work-thumbnail">
                   </a>
                   <input type="radio" class="option-input radio" value="{{wantedBook.id}}" name="wantedBook" ngModel>
                   <div class="ga-border"></div>
-                  <div>{{wantedBook.id}}</div>
                   <div>Book: {{wantedBook.name}}</div>
                   <p class="text-muted text-center"><small>{{wantedBook.description}}</small></p>
                 </div>
               </div>
-
             </div>
-            <!--  button -->
-            <div class="col-md-6 offset-md-4 align-items-right">
-              <button class="btn btn-primary btn-lg" block="true" type="submit">Submit</button>
+            <div *ngIf="hasError">
+              <span class="text-danger">{{error}}</span>
+            </div>
+            <div class="col-md-12 text-center mt-3">
+              <button class="btn btn-primary btn-lg ml-1 mr-auto" block="true" type="submit">Create request</button>
             </div>
           </form>
         </div>
       </div>
     </div>
-  </div>
-  <div *ngIf="hasError">
-    <span class="text-danger">{{error}}</span>
   </div>
 </div>
