--- a/frontend/frontend/src/app/components/edit-book/edit-book.component.html
+++ b/frontend/frontend/src/app/components/edit-book/edit-book.component.html
@@ -4,14 +4,11 @@
   <h1><span class="glyphicon glyphicon-user"></span>Edit Book</h1>
   <hr>
   <div class="row">
-    <!-- left column -->
     <div class="col-md-3">
       <div class="text-center">
         <img src="{{book.imgUrl}}" class="img-fluid">
       </div>
     </div>
-
-    <!-- edit form column -->
     <div class="col-md-9 personal-info">
       <h3 class="ml-3">Information</h3>
 
@@ -37,10 +34,11 @@
               name="imgUrl" ngModel>
           </div>
         </div>
+        <div *ngIf="hasError" class="my-2">
+          <span class="text-danger ml-3 font-weight-bold">{{error}}</span>
+        </div>
         <button class='btn btn-primary ml-3' type="submit" value="submit">Save changes</button>
-
       </form>
     </div>
   </div>
 </div>
-<hr>
