--- a/frontend/frontend/src/app/components/incoming-requests/incoming-requests.component.html
+++ b/frontend/frontend/src/app/components/incoming-requests/incoming-requests.component.html
@@ -1,44 +1,52 @@
 <app-header></app-header>
-
-
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="container pb-5 mb-2">
-  <!--Item-->
+<div class="container pb-5 my-4">
+  <div *ngIf="incomingRequests && incomingRequests.length > 0">
+    <div class="cart-item d-md-flex justify-content-between" *ngFor="let r of incomingRequests">
 
-  <div class="cart-item d-md-flex justify-content-between" *ngFor="let r of incomingRequests"  >
-    <span class="remove-item" (click)="reject(r.requestId)"  *ngIf="r.status == 'PENDING'"><i class="fa fa-times"></i></span>
-    <div class="px-3 my-3" *ngIf="r.status == 'PENDING'" >
-      <a class="cart-item-product" href="https://www.google.com/search?q={{r.bookToGive.name}}">
-        <div class="cart-item-product-thumb"><img src="{{r.bookToGive.imgUrl}}" alt="Product"></div>
-        <div class="cart-item-product-info">
-          <h4 class="cart-item-product-title">{{r.bookToGive.name}}</h4><span><strong>Description:
-            </strong>{{r.bookToGive.description}} ||||||
-            {{r.status}}
-          </span>
+      <span class="remove-item" (click)="reject(r.requestId)" *ngIf="r.status == 'PENDING'"><i
+          class="fa fa-times"></i></span>
+      <div class="px-3 my-3" *ngIf="r.status == 'PENDING'">
+        <a class="cart-item-product" href="https://www.google.com/search?q={{r.bookToGive.name}}">
+          <div class="cart-item-product-thumb"><img src="{{r.bookToGive.imgUrl}}" alt="Product"></div>
+          <div class="cart-item-product-info">
+            <h4 class="cart-item-product-title">{{r.bookToGive.name}}</h4><span><strong>Description:
+              </strong>{{r.bookToGive.description}}
+            </span>
+          </div>
+        </a>
+      </div>
+      <div class="px-3 my-3" *ngIf="r.status == 'PENDING'">
+        <a class="cart-item-product" href="https://www.google.com/search?q={{r.wantedBook.name}}">
+          <div class="cart-item-product-thumb"><img src="{{r.wantedBook.imgUrl}}" alt="Product"></div>
+          <div class="cart-item-product-info">
+            <h4 class="cart-item-product-title">{{r.wantedBook.name}}</h4><span><strong>Description:
+              </strong>{{r.wantedBook.description}}
+            </span>
+          </div>
+        </a>
+      </div>
+      <div class="px-3 my-3 text-center" *ngIf="r.status == 'PENDING'">
+        <div class="cart-item-label">From: </div><span
+          class="text-xl font-weight-medium">{{r.bookToGive.owner.fullName}}</span>
+      </div>
+      <div class="px-3 my-3 text-center" *ngIf="r.status == 'PENDING'">
+        <div class="cart-item-label">To: </div><span
+          class="text-xl font-weight-medium">{{r.wantedBook.owner.fullName}}</span>
+      </div>
+      <div class="row">
+        <div class="px-3 my-3 text-center ml-4" *ngIf="r.status == 'PENDING'">
+          <button class="btn btn-success btn-bg mb-auto" style="margin-top: 120px; margin-left: 20px;"
+            (click)="accept(r.requestId)">Accept</button>
         </div>
-      </a>
-    </div>
-    <div class="px-3 my-3 text-center"  *ngIf="r.status == 'PENDING'" >
-      <a class="cart-item-product" href="https://www.google.com/search?q={{r.wantedBook.name}}">
-        <div class="cart-item-product-thumb"><img src="{{r.wantedBook.imgUrl}}" alt="Product"></div>
-        <div class="cart-item-product-info">
-          <h4 class="cart-item-product-title">{{r.wantedBook.name}}</h4><span><strong>Description:
-            </strong>{{r.wantedBook.description}}
-          </span>
-        </div>
-      </a>
+      </div>
     </div>
 
-    <div class="px-3 my-3 text-center"  *ngIf="r.status == 'PENDING'">
-      <div class="cart-item-label">From: </div><span
-        class="text-xl font-weight-medium">{{r.bookToGive.owner.fullName}}</span>
+  </div>
+  <div *ngIf="incomingRequests && incomingRequests.length &lt; 1">
+    <div class="bg-light h-50">
+      <span>None</span>
     </div>
-    <div class="px-3 my-3 text-center"  *ngIf="r.status == 'PENDING'">
-      <div class="cart-item-label">To: </div><span
-        class="text-xl font-weight-medium">{{r.wantedBook.owner.fullName}}</span>
-    </div>
-    <div class="px-3 my-3 text-center"  *ngIf="r.status == 'PENDING'">
-      <button class="btn btn-success btn-bg" (click)="accept(r.requestId)">Accept</button>
-    </div>
+
   </div>
 </div>
