--- a/frontend/frontend/src/app/components/register/register.component.html
+++ b/frontend/frontend/src/app/components/register/register.component.html
@@ -55,7 +55,7 @@
               </div>
             </div>
             <div class="col-md-6 offset-md-4" *ngIf="hasError">
-              <span class="text-danger">{{error}}.Please try again.</span>
+              <span class="text-danger font-weight-bold">{{error}}.</span>
             </div>
             <div class="col-md-6 offset-md-4">
               <button class="btn btn-primary my-4" block="true" type="submit">Register</button>
