--- a/frontend/frontend/src/app/components/header/header.component.html
+++ b/frontend/frontend/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   <div class="collapse navbar-collapse container-fluid" id="navbarNavDropdown">
-    <ul class="navbar-nav  ">
+    <ul class="navbar-nav ">
       <a class="navbar-brand" href="/books">
-        <img src="https://lh3.googleusercontent.com/proxy/Vxr7f43YcOejmdzp7U2ZGD-379FjSicyw52SQXdisXuUxkjJ4RfqfaIbRgFpbfvQU_1FzwZS6s4yUnoq3CO1aSgTlfe9Sx1zobMkoakaqLAqYnMLcWP9YzsxVAq7cBo-ZItSA2ucJ0sVghF29SNI_gRsOOZz"
-         style="width: 60px; height: 60px; border: 1;" alt="logo"  class="bg-light">
+        <img src="https://www.clipartkey.com/mpngs/m/60-606042_book-icon-png-book-icon-png-transparent.png"
+         style="width: 60px; height: 60px; border: 1;" alt="logo" class="bg-light">
         BookTradingClub
       </a>
       <li class="nav-item">
