--- a/frontend/frontend/src/app/components/incoming-requests/incoming-requests.component.html
+++ b/frontend/frontend/src/app/components/incoming-requests/incoming-requests.component.html
@@ -44,9 +44,14 @@
 
   </div>
   <div *ngIf="incomingRequests && incomingRequests.length &lt; 1">
-    <div class="bg-light h-50">
-      <span>None</span>
-    </div>
-
+    <div id="notfound">
+      <div class="notfound">
+      <div class="notfound-2">
+      <h1>Oops!</h1>
+      <h2>It looks like there are no incoming requests.</h2>
+      </div>
+      <a href="/user/profile">Go back</a>
+      </div>
+      </div>
   </div>
 </div>
