--- a/frontend/frontend/src/app/components/login/login.component.html
+++ b/frontend/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<h1>Book Trading Club</h1>
+<h1>BookTradingClub</h1>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
@@ -22,7 +22,7 @@
               </div>
             </div>
             <div class="col-md-6 offset-md-4" *ngIf="hasError">
-              <span class="text-danger">{{error}}. Please try again.</span>
+              <span class="text-danger font-weight-medium">{{error}}. Please try again.</span>
             </div>
             <!-- Sign in button -->
             <div class="col-md-6 offset-md-4">
