--- a/frontend/frontend/src/app/components/my-requests/my-requests.component.css
+++ b/frontend/frontend/src/app/components/my-requests/my-requests.component.css
@@ -3,6 +3,95 @@ body{
   background:#eee;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box
+}
+
+body {
+  padding: 0;
+  margin: 0
+}
+
+#notfound {
+  position: relative;
+  height: 60vh;
+}
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%)
+}
+
+.notfound {
+  max-width: 520px;
+  width: 100%;
+  line-height: 1.4;
+  text-align: center
+}
+
+.notfound .notfound-2 {
+  position: relative;
+  height: 200px;
+  margin: 0 auto 20px;
+  z-index: -1
+}
+
+.notfound .notfound-2 h1 {
+  font-family: montserrat,sans-serif;
+  font-size: 205px;
+  font-weight: 200;
+  margin: 0;
+  color: #211b19;
+  text-transform: uppercase;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%)
+}
+
+.notfound .notfound-2 h2 {
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #211b19;
+  border: 1px solid;
+  background: #fff;
+  padding: 10px 5px;
+  margin: auto;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0
+}
+
+.notfound a {
+  display: inline-block;
+  font-weight: 400;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 13px 23px;
+  border-radius: 10px;
+  background: #0275d8;
+  font-size: 18px;
+  -webkit-transition: .2s all;
+  transition: .2s all
+}
+
+.notfound a:hover {
+  color: #0275d8;
+  background-color:white;
+  border: 1px solid #0275d8;
+}
+
 .product-card {
 position: relative;
 max-width: 380px;
