--- a/frontend/frontend/src/app/components/requests/request.component.html
+++ b/frontend/frontend/src/app/components/requests/request.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container pb-5 mb-2 my-4">
-  <h3 class="ml-3">All requests</h3>
   <div *ngIf="requests.length &gt; 0">
+    <h3 class="ml-3">All requests</h3>
   <div class="cart-item d-md-flex justify-content-between" *ngFor="let r of requests">
     <div class="px-3 my-3">
       <a  class="cart-item-product" href="https://www.google.com/search?q={{r.bookToGive.name}}">
@@ -35,6 +35,14 @@
   </div>
   </div>
   <div *ngIf="requests.length == 0">
-    <span class="ml-3">There aren't any requests.</span>
+    <div id="notfound">
+      <div class="notfound">
+      <div class="notfound-2">
+      <h1>Oops!</h1>
+      <h2>It looks like there are no requests.</h2>
+      </div>
+      <a href="/books">Make a request</a>
+      </div>
+      </div>
   </div>
 </div>
