--- a/frontend/frontend/src/app/components/login/login.component.html
+++ b/frontend/frontend/src/app/components/login/login.component.html
@@ -3,7 +3,9 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card">
-        <div class="card-header">Login</div>
+        <div class="card-header">
+          <h3>Login</h3>
+        </div>
         <div class="card-body">
           <form class="text-center border border-light p-5" #userlogin="ngForm" (ngSubmit)="onSubmit(userlogin.value)">
             <div class="form-group row">
@@ -13,7 +15,6 @@
                   ngModel required>
               </div>
             </div>
-            <!-- Password -->
             <div class="form-group row">
               <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
               <div class="col-md-6">
@@ -22,15 +23,13 @@
               </div>
             </div>
             <div class="col-md-6 offset-md-4" *ngIf="hasError">
-              <span class="text-danger font-weight-medium">{{error}}. Please try again.</span>
+              <span class="text-danger font-weight-medium">{{error}}. Try again.</span>
             </div>
-            <!-- Sign in button -->
             <div class="col-md-6 offset-md-4">
               <button class="btn btn-primary my-4" block="true" type="submit">Sign in</button>
               <br>
               <a routerLink="/register">Register</a>
             </div>
-
           </form>
         </div>
       </div>
